# ApolloMetricProcessing

./: .gitignore  README
PBS/: a15_match.pbs  a15_qtree.pbs  a15_stereo.pbs  a15_stereo_debug.pbs  a15_vwip_fltr.pbs  a15_vwip_gen.pbs  a16_stereo.pbs  a16_vwip_fltr.pbs  a16_vwip_gen.pbs
Python/: FittingFunction.py  InterestIO.py  README  match_prefilter.py  reconstructConvertAll.py  smart_picker.py  stereo_processing.py  vwip_filtering.py  vwip_generation.py  vwip_matching.py
Python/FilePrep/: angle_detect_del.py  produce_footprints.py  reduce_cube.py  rev_print.py  spice_att_del.py  time_check_modify.py
Python/IPDetection/: center_lat_lon_det.py  match_prefilter.py  vwip_generation.py
Python/Mosaic/: deploy_plate.py
Python/Stereo/: stereo_processing.py
Python/Stereo2/: job_client.py  job_server.py  job_server_quit.py  job_stat.py
docs/: Makefile  apollo_processing.tex
tools/: CMakeLists.txt
tools/CMakeModules/: AddApollo.cmake  FindBLAS.cmake  FindCSPICE.cmake  FindFLANN.cmake  FindISIS.cmake  FindLAPACK-eigen.cmake  FindStereoPipeline.cmake  FindVisionWorkbench.cmake
tools/pba/: CMakeLists.txt  isis_cnet_to_nvm.cc  nvm_build.cc  nvm_error.cc  nvm_refine_tri.cc  nvm_to_bundlevis.cc  nvm_to_isis_adjust.cc  nvmio.h  obalog_brief_nvm.cc
tools/scripts/: CMakeLists.txt  FittingFunction.py  ba_filter.cc  generate_wac_cnet.cc  generate_wac_crop.cc  homography_fit.cc  ip_guided_match.cc  kriging_guided_match.cc  manual_gcp_picker.py  predict_homography.cc  smart_picker.py
tools/src/: ApolloShapes.h  CMakeLists.txt  Kriging.h  LolaQuery.h  ann_matcher.h  apollo_bulk_match.cc  apollo_guided_match.cc  apollo_match.cc  apollo_to_pinhole.cc  bulk_match_unpack.cc  camera_fitting.h  camera_solve.h  cnet_convert.cc  cnet_merge.cc  cnet_usgs_conv.cc  create_orthoproject_mask.cc  csv_2_isis_adjust.cc  csv_2_match.cc  equalization.cc  equalization.h  extract_clementine_gcp.cc  extract_lola_wac_gcp.cc  extract_lola_wac_gcp2.cc  extract_lola_wac_gcp3.cc  gcp_from_net.cc  ip_disparity.cc  iprecord.h  isis_adjust_2_csv.cc  isis_cnet_to_nvm.cc  lola_relookup.cc  nvm_to_bundlevis.cc  overlap_check.cc  overlap_check.h  overlap_check_match.cc  pc_display.cc  ransac.h  reduce_match.cc  refine_ip.cc  solve_apollo_gcp.cc  surf_io.cc  (+2 more)
